# diskmind

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ai.rs  lib.rs  main.rs  safety.rs  scanner.rs  system.rs
src/app/: App.tsx
src/features/assistant/: README.md
src/features/cleanup/: README.md
src/features/history/: README.md
src/features/scanner/components/: BackendStatus.tsx  DeleteConfirmationModal.tsx  DiskExplorer.tsx  DriveCard.tsx  DriveSelector.tsx  FileTable.tsx  ScanControls.tsx
src/features/scanner/store/: useScanStore.ts
src/features/settings/components/: ThemeToggle.tsx
src/lib/: formatters.ts
src/shared/api/: disk.ts  system.ts
src/shared/hooks/: useBackendHealth.ts
src/shared/layout/: README.md
src/shared/store/: appPreferences.ts
src/shared/types/: backend.ts
src/shared/ui/: badge.tsx  button.tsx  card.tsx
src/styles/: globals.css
