[package]
name = "diskmind"
version = "0.1.0"
description = "Secure and intelligent disk analysis desktop app"
authors = ["DiskMind Team"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "diskmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.5.1", features = [] }
thiserror = "2.0"
tracing = "0.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Storage_FileSystem", "Win32_UI_Shell"] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
